[package]
name = "ffht"
version = "1.1.0"
authors = ["OChicken (Rust wrapper)", "Ilya Razenshteyn, Ludwig Schmidt (Original C)"]
edition = "2021"
description = "Rust wrapper for Fast Fast Hadamard Transform (FFHT) library"
license = "MIT"
repository = "https://github.com/FALCONN-LIB/FFHT"

[dependencies]
ndarray = "0.15"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
approx = "0.5"

[lib]
name = "ffht"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "cluster_bp"
path = "examples/cluster_bp.rs"
